Go to http://github.com/plack/Plack/issues for the roadmap and known issues.

{{$NEXT}}

1.0039  2015-12-06 03:27:59 PST
    [BUG FIXES]
        - Revert the change to use the faster header builder because it breaks the legit
          Plack::Response constructor that sets HTTP::Header object directly (#541)

1.0038  2015-11-25 12:36:29 PST
    [IMPROVEMENTS]
        - Added MIME type for apk files #514 (allanwhiteford)
        - Allow passing custom formatters to Plack::Middleware::AccessLog #515 (frew)
        - Allow '0' be a valid category for log4perl middleware #523
        - Doc fix for Plack::Runner #528 (polettix)
        - Doc improvements for -R/-M command line #529 (mickeyn)
        - Bind test server explicitly on 127.0.0.1, not 0.0.0.0
        - Support single-process manager in FCGI #535 (ianburrell)
        - Optimize Plack::Response header builder #540 (kazeburo)

1.0037  2015-06-19 10:01:31 PDT
    [Improvements]
        - Lint: Support HTTP/2 in SERVER_PROTOCOL (kazuho) #511
        - Bump HTTP::Headers::Fast dependency #512

1.0036  2015-06-03 12:01:53 PDT
    [BUG FIXES]
        - Fix CGIBin test to not use CGI.pm #509

1.0035  2015-04-16 10:08:21 CEST
    [BUG FIXES]
        - Fixed parsing of empty query string pairs (aristotle) #500

    [IMPROVEMENTS]
        - Documentation updates for FCGI (otrosien) #494
        - Use HTTP::Headers::Fast in Plack::Request
        - Big performance optimizations on Plack::Util::header_* (aristotle) #498
        - Added .webm to Plack::MIME (marlencrabapple) #503
        - Use Cookie::Baker to bake cookies in Plack::Response (oalders)
        - reduced the size of distribution by making binary files smaller

1.0034  2015-02-02 21:42:42 CET
    [SECURITY]
        - Fixed a possible directory traversal with Plack::App::File on Win32 (sri)

    [IMPROVEMENTS]
        - Documentation improvements (timbunce, oalders, autarch, frioux)
        - Avoid warnings in Plack::App::WrapCGI (frioux)
