@@ -12,9 +12,11 @@ sub new {
     my($class, $app, %args) = @_;
 
     my $server = Test::TCP->new(
+        listen => 1,
+        host => $args{host},
         code => sub {
-            my $port = shift;
-            my $server = Plack::Loader->auto(port => $port, host => ($args{host} || '127.0.0.1'));
+            my $socket = shift;
+            my $server = Plack::Loader->auto(listen_sock => $socket);
             $server->run($app);
             exit;
         },
